Refactoring: Updated Abstract Sample Form